examples/test/testpolicy17722.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17722
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key24: value10
      key6: value10
      key47: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value22
          key39: value41
          key6: value24
      podSelector:
        matchLabels:
          key35: value13
          key18: value8
